<resources>
    <string name="app_name">RCARS</string>
    <string name="title_activity_vehicles">VehiclesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="brandLogo">BrandLogo</string>
    <string name="my_vehicles">MIS VEHÍCULOS</string>
    <string name="yearLbl">Año:</string>
    <string name="fuelLbl">Combustible:</string>
    <string name="plateLbl">Matrícula:</string>
    <string name="transmissionLbl">Transmisión:</string>
    <string name="purchaseDateLbl">Fecha de compra:</string>
    <string name="inspectionDateLbl">Fecha de revisión:</string>
    <string name="nextInspectionDateLbl">Próxima revisión:</string>
    <string name="secondKeyLbl">Segunda llave:</string>
    <string name="manualLbl">Manual:</string>
    <string name="welcome">Bienvenida</string>
    <string name="profileIcon">ProfileIcon</string>
    <string name="carIcon">carIcon</string>
    <string name="myCars">Mis coches</string>
    <string name="documentIcon">documentIcon</string>
    <string name="documents">Documentos</string>
    <string name="servicesIcon">servicesIcon</string>
    <string name="services">Revisiones</string>
    <string name="appointmentIcon">appointmentIcon</string>
    <string name="appointment">Pide cita</string>
    <string name="workshopIcon">workshopIcon</string>
    <string name="workshop">Talleres</string>
    <string name="officesIcon">officesIcon</string>
    <string name="offices">Oficinas</string>
    <string name="carKeysIcon">carKeysIcon</string>
    <string name="upgradeYourCar">CAMBIA TU COCHE</string>
    <string name="UpgradeCarText">Tenemos una gran variedad de stock, puedes consultar todos los vehículos AQUI.</string>
    <string name="sampleName">Nombre Apellido</string>
    <string name="plateTest">1234HDP</string>
    <string name="yearTest">2020</string>
    <string name="fuelTest">Gasolina</string>
    <string name="transTest">Manual</string>
    <string name="dateTest">13/05/2021</string>
    <string name="trueTest">Si</string>
    <string name="falseTest">No</string>
    <string name="makeTest">Mercedes</string>
    <string name="modelTest">CLA 200d</string>
    <string name="islandTest">Fuerteventura</string>
    <string name="addressTest">Av. Juan de Bethencourt, 12, Puerto del Rosario</string>
    <string name="phoneNumberTest">928 114 200</string>
</resources>