<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_header_bg"
        android:padding="25dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_v"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="Carla Llorens"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/name_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:contentDescription="@string/profileIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <LinearLayout
            android:id="@+id/layoutBodyVehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="300dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/itemVehicles"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="7.5dp"
                    android:layout_marginRight="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/carsIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/car"
                        android:contentDescription="@string/carIcon" />

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/myCars"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemDocuments"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="7.5dp"
                    android:layout_marginLeft="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/documentsIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/documents"
                        android:contentDescription="@string/documentIcon" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/documents"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/itemServices"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="7.5dp"
                    android:layout_marginRight="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/serviceIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/service"
                        android:contentDescription="@string/servicesIcon" />

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/services"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemAppointment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="7.5dp"
                    android:layout_marginLeft="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/contactIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/contact"
                        android:contentDescription="@string/appointmentIcon" />

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/appointment"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2point5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="15dp"
                android:background="@drawable/single_item_main_menu_bg"
                android:gravity="center">

                <TextView
                    android:id="@+id/islandLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/islandTest"
                    android:textSize="22sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/addressLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/addressTest"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/phoneLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumberTest"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/itemWorkshop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="7.5dp"
                    android:layout_marginRight="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/shopsIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/workshop"
                        android:contentDescription="@string/workshopIcon" />

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/workshop"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemOffices"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="7.5dp"
                    android:layout_marginLeft="7.5dp"
                    android:background="@drawable/single_item_main_menu_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/officeIcon"
                        android:layout_width="50dp"
                        android:layout_height="140dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/location"
                        android:contentDescription="@string/officesIcon" />

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-40dp"
                        android:text="@string/offices"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/itemFinalWide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:background="@drawable/main_item_main_menu_bg"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/itemOffices"
                app:layout_constraintStart_toStartOf="@id/itemWorkshop"
                app:layout_constraintTop_toBottomOf="@id/itemWorkshop">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="35dp"
                    android:layout_height="0dp"
                    android:src="@drawable/carkey"
                    app:layout_constraintBottom_toBottomOf="@+id/textFixed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textFixed"
                    app:layout_constraintVertical_bias="0"
                    android:contentDescription="@string/carKeysIcon" />

                <TextView
                    android:id="@+id/textFixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/single_item_main_menu_bg_no_shadow"
                    android:padding="5dp"
                    android:text="@string/upgradeYourCar"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    />

                <TextView
                    android:id="@+id/textFinalWide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/UpgradeCarText"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textFixed" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>